--- a/mailcleaner/info.template
+++ b/mailcleaner/info.template
@@ -1,4 +1,4 @@
-{'author': 'Tobias Unsleber (tu@inline.de)',
+{'author': 'Megabert',
  'description': 'Prueft die Queues von Mailcleaner(www.mailcleaner.org)',
  'download_url': 'http://www.megabert.de/',
  'files': {'agents': ['plugins/mailcleaner.queues'],
